Perkin-UAT/force-app/main/default/objects/ProductCategory/fields/B2B_Category_Heading__c.field-meta.xml
<CustomField>
    <fullName>B2B_Category_Heading__c</fullName>
    <label>B2B Category Heading</label>
    <length>255</length>
    <translateData>true</translateData>
    <type>Text</type>
</CustomField>