Perkin-UAT/force-app/main/default/objects/ProductCategory/fields/B2B_Featured_Category__c.field-meta.xml
<CustomField>
    <fullName>B2B_Featured_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Featured Category</label>
    <type>Checkbox</type>
</CustomField>