Perkin-UAT/force-app/main/default/objects/ProductCategory/fields/B2B_Featured_Category_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>B2B_Featured_Category_Sort_Order__c</fullName>
    <label>B2B Featured Category Sort Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>