Perkin-UAT/force-app/main/default/objects/ProductCategory/listViews/Store0ZSPs0000000GZROA2.listView-meta.xml
<ListView>
    <fullName>Store0ZSPs0000000GZROA2</fullName>
    <columns>Name</columns>
    <columns>IsNavigational</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Catalog</field>
        <operation>equals</operation>
        <value>PerkinElmer Catalog</value>
    </filters>
    <label>PerkinElmer Categories</label>
</ListView>